# VoiceGit

./: .gitignore  README.md  commands.py  intent.py  intent_model.pkl  keywords.py  learning.py  learning_notes.txt  learning_stream.txt  learning_window.py  main.py  model.py  pyproject.toml  requirements.txt  safety.py  voice.py
voicegit/: commands.py  dataset.py  executor.py  intent.py  keywords.py  learning.py  learning_window.py  main.py  model.py  safety.py  state.py  voice.py
